# healthcare-integration-engine

./: .gitignore  DEVELOPER_GUIDE.md  DEV_LOG.md  DOCS.md  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  USER_GUIDE.md  docker-compose.test.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  run_tests.sh  tsconfig.json
app/: main.py
backend/: .coverage  (+11 more)
mcp-server-isc-iris/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  example.py  glama.json  pyproject.toml  requirements-dev.txt  test_iris_connection.py  test_sql_operations.py
mcp-server-isc-iris/.github/workflows/: main.yml
mcp-server-isc-iris/docs/: MCP_TESTING_GUIDE.md  NHS_Trust_Integration_Design.md  adding_business_services.md
mcp-server-isc-iris/src/mcp_server_iris/: __init__.py  __main__.py  business_services.py  interoperability.py  mcpserver.py  server.py  sql.py  tools.py
mcp-server-isc-iris/tests/: add_adt_components.py  check_production_status.py  conftest.py  control_production.py  sample.hl7
mcp-server-isc-iris/tests/auto_regression/: check_logs.py  create_adt_production.py  start_production.py  test_add_file_reader.py  test_add_file_reader.py.bak  test_add_mllp_receiver.py  test_all_mcp_tools.py  test_all_tools.py  test_file_reader.py  test_mllp_service.py  test_server.py  test_tools.py  update_file_reader.py
mcp-server-isc-iris/tests/namespace_tests/: create_namespace.py  create_ns_with_os.py  debug_namespace.py  namespace_manager.py  setup_demo_tie.py  setup_demo_tie_fixed.py
mcp-server-isc-iris/tests/sql/: test_sql_operations.py
(+234 files in other folders)
